test/cli/test/deny-pod-delete-match-opn-block/deny-pod-delete-match-opn-block.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-pod-delete-match-opn-block
spec:
  background: false
  rules:
    - name: deny-pod-delete-match-opn-block
      match:
        any:
        - resources:
            kinds:
              - Pod
            operations:
              - DELETE
      validate:
        failureAction: Enforce
        message: Pod cannot be deleted
        deny: {}
