test/cli/test/deny-pod-delete-match-opn-block/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-delete
spec:
  containers:
  - name: busybox
    image: busybox:1.28
