test/cli/test/deny-pod-delete-match-opn-block/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: deny-pod-delete-match-opn-block
  resources:
  - name: test-delete
    values:
      request.operation: DELETE
